--- a/_posts/studylog/python_post/2025-04-18-python_uv.md
+++ b/_posts/studylog/python_post/2025-04-18-python_uv.md
@@ -136,6 +136,16 @@ Installed 28 packages in 74ms
 
 설치 시작하자마자 끝났다.
 
+좀 찾아보니 내가 처음에 사용할 때는 이것처럼 빠르지 않았다.
+
+`pip` 설치속도와 비슷하다고 느꼈다.
+
+하지만 이후에 또 설치를 하게 된다면, uv는 이 캐시에서 필요한 파일을 바로 가져와 설치한다.
+
+이때 하드 링크(hard link) 방식을 활용해, 실제 파일 복사 없이도 빠르게 가상환경에 패키지를 추가한다고 한다.
+
+결과적으로 네트워크를 통해 다운로드를 하고 빌드하는 과정이 생략되어 빠른 것이라고 한다.
+
 ## Manage
 
 ```uv```는 pip와는 다르게 관리와 공유가 매우 편하게 되어있다.
